etc/envoy/front-proxy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/loan-service/"
                route:
                  cluster: loan-service
                  prefix_rewrite: "/"
              - match:
                  prefix: "/user-service/"
                route:
                  cluster: user-service
                  prefix_rewrite: "/"
              - match:
                  prefix: "/loan-factory/"
                route:
                  cluster: loan-factory-service
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: loan-service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: loan-service
        port_value: 3000
  - name: user-service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: user-service
        port_value: 80
  - name: loan-factory-service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: loan-factory-service
        port_value: 3000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
